--- a/assets/create.html
+++ b/assets/create.html
@@ -55,6 +55,22 @@
                required>
     </div>
     <div class="form-group">
+        <label for="value">Docker Init<br>
+            <small class="form-text text-muted">
+                Enable Docker init
+            </small>
+        </label>
+        <input type="checkbox" name="init" value="false">
+    </div>
+    <div class="form-group">
+        <label for="value">Privileged<br>
+            <small class="form-text text-muted">
+                Run container in privileged mode
+            </small>
+        </label>
+        <input type="checkbox" name="privileged" value="false">
+    </div>
+    <div class="form-group">
         <label for="value">Initial Value<br>
             <small class="form-text text-muted">
                 This is how many points the challenge is worth initially.
