Add per challenge flag template

--- a/assets/create.html
+++ b/assets/create.html
@@ -9,6 +9,14 @@
 
 {% block value %}
     <div class="form-group">
+        <label for="value">Flag Template<br>
+            <small class="form-text text-muted">
+                The template used to generate the flag
+            </small>
+        </label>
+        <input type="text" class="form-control" name="flag_template" placeholder="Enter a Jinja2 template" required>
+    </div>
+    <div class="form-group">
         <label for="value">Docker Image<br>
             <small class="form-text text-muted">
                 The docker image used to deploy
