--- a/assets/create.html
+++ b/assets/create.html
@@ -2,7 +2,7 @@
 
 {% block header %}
     <div class="alert alert-secondary" role="alert">
-        Dynamic docker challenge allows players to deploy their per-challenge standalone instances.
+        Docker challenge allows players to deploy their per-challenge standalone instances.
     </div>
 {% endblock %}
 
@@ -78,47 +78,8 @@
         </label>
         <input type="checkbox" name="privileged" value="false">
     </div>
-    <div class="form-group">
-        <label for="value">Initial Value<br>
-            <small class="form-text text-muted">
-                This is how many points the challenge is worth initially.
-            </small>
-        </label>
-        <input type="number" class="form-control" name="value" placeholder="Enter value" required>
-    </div>
-
-    <div class="form-group">
-        <label for="value">Decay Limit<br>
-            <small class="form-text text-muted">
-                The amount of solves before the challenge reaches its minimum value
-            </small>
-        </label>
-        <input type="number" class="form-control" name="decay" placeholder="Enter decay limit" required>
-    </div>
-
-    <div class="form-group">
-        <label for="value">Minimum Value<br>
-            <small class="form-text text-muted">
-                This is the lowest that the challenge can be worth
-            </small>
-        </label>
-        <input type="number" class="form-control" name="minimum" placeholder="Enter minimum value" required>
-    </div>
-
-    <div class="form-group">
-        <label for="value">Score Type<br>
-            <small class="form-text text-muted">
-                Decide it use dynamic score or not
-            </small>
-        </label>
-
-        <select class="form-control" name="dynamic_score">
-            <option value="0" selected>Static Score</option>
-            <option value="1">Dynamic Score</option>
-        </select>
-    </div>
 {% endblock %}
 
 {% block type %}
-    <input type="hidden" value="dynamic_docker" name="type" id="chaltype">
+    <input type="hidden" value="docker" name="type" id="chaltype">
 {% endblock %}
